--- a/src/components/SnapFolio/sections/Contact/Contact.module.scss
+++ b/src/components/SnapFolio/sections/Contact/Contact.module.scss
@@ -6,7 +6,7 @@
     color: var(--contrast-color);
     padding: 3rem;
     border-radius: 1rem;
-    height: 100%;
+    min-height: auto; // Remove height: 100%
 
     h3 {
       color: var(--contrast-color);
@@ -73,7 +73,7 @@
     background-color: var(--surface-color);
     padding: 3rem;
     border-radius: 1rem;
-    height: 100%;
+    min-height: auto; // Remove height: 100%
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.05);
 
     h3 {
