--- a/src/components/SnapFolio/sections/FAQ/FAQ.module.scss
+++ b/src/components/SnapFolio/sections/FAQ/FAQ.module.scss
@@ -1,7 +1,7 @@
 @use '../../shared/snapfolio-variables.scss' as *;
 
 .faq {
-  padding: 80px 0;
+  padding: 20px 0 10px 0; // Reduced from 80px to minimal padding
 
   .faqContainer {
     display: flex;
